--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,6 +8,7 @@ header{
     vertical-align: center;
     flex-flow:row;
     margin-bottom:50px;
+    padding-top: 25px;
 }
 footer{
     height: 100px;
